--- a/pages/shop.html
+++ b/pages/shop.html
@@ -13,7 +13,7 @@
          <img src="../imgs/logo.png" width="92px">
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto ">  
-              <li class="nav-item"><a class="nav-link text-dark px-3" href="/index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link text-dark px-3" href="../index.html">Home</a></li>
               <li class="nav-item"><a class="nav-link text-dark px-3" href="./about.html">About</a></li>
               <li class="nav-item"><a class="nav-link text-dark px-3" href="./shop.html">Shop</a></li>
               <li class="nav-item"><a class="nav-link text-dark px-3" href="./contact.html">Contact</a></li>
